fixed logo width on mobile

--- a/src/components/WelcomeScreen.css
+++ b/src/components/WelcomeScreen.css
@@ -20,7 +20,7 @@
 
 .welcome-logo {
   height: 120px;
-  width: auto;
+  width: 100%;
   margin-bottom: 20px;
 }
 
